# rk_games_electricity

./: LICENSE  README.md
cpp/: CMakeLists.txt  config.ini  run.sh  solution.txt
cpp/include/: gnuplot_i.hpp  matplotlibcpp.h
cpp/src/: config.h.in  data.cpp  data.hpp  equilibrium.cpp  main.cpp  methods.hpp  monte_carlo.cpp  plot_functions.cpp  retailer.cpp  utils.hpp  utils_config.cpp  utils_integration.cpp  utils_maths.cpp  utils_paths.cpp  utils_progress.cpp
